Admin role related fixes
